--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -1,8 +1,13 @@
 # -*- coding: utf-8 -*-
-$:.unshift("/Library/RubyMotion/lib")
-require 'motion/project'
+$:.unshift "/Library/RubyMotion/lib"
+require "motion/project"
+
+require "bundler"
+Bundler.require
 
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
-  app.name = 'sample_app'
+  app.name = "sample_app"
 end
+
+MotionBundler.setup
