Updated README.md and the sample app Rakefile

--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -7,7 +7,8 @@ Bundler.require
 
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
-  app.name = "sample_app"
+  app.name = "SampleApp"
 end
 
+# Track and specify files and their mutual dependencies within the :motion Bundler group
 MotionBundler.setup
