--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -2,6 +2,7 @@
 $:.unshift "/Library/RubyMotion/lib"
 require "motion/project"
 
+# Require and prepare Bundler
 require "bundler"
 Bundler.require
 
