Tackling LoadError within `require_with_mb_trace`

--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -16,4 +16,5 @@ MotionBundler.setup do |app|
   app.require "stringio"
   app.require "strscan"
   app.require "zlib"
+  app.require "httparty"
 end
