Using `Ripper` for tracing require (and require_relative) statements within the app directory: - Introduced MotionBundler::Ripper and MotionBundler::Ripper::Builder - Refactored MotionBundler (made `trace_require` private and cleanup setup implementation)

--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -12,9 +12,4 @@ Motion::Project::App.setup do |app|
 end
 
 # Track and specify files and their mutual dependencies within the :motion Bundler group
-MotionBundler.setup do |app|
-  app.require "stringio"
-  app.require "strscan"
-  app.require "zlib"
-  app.require "httparty"
-end
+MotionBundler.setup
