--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -12,4 +12,6 @@ Motion::Project::App.setup do |app|
 end
 
 # Track and specify files and their mutual dependencies within the :motion Bundler group
-MotionBundler.setup
+MotionBundler.setup do |app|
+  app.require "base64"
+end
