--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -8,7 +8,7 @@ Bundler.require
 
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
-  app.name = "SampleApp"
+  app.name = "MBundler"
 end
 
 # Track and specify files and their mutual dependencies within the :motion Bundler group
