--- a/sample_app/Rakefile
+++ b/sample_app/Rakefile
@@ -16,4 +16,9 @@ require "/Users/paulengel/.rvm/rubies/ruby-2.0.0-p195/lib/ruby/2.0.0/cgi/html.rb
 # Track and specify files and their mutual dependencies within the :motion Bundler group
 MotionBundler.setup do |app|
   app.require "base64"
+  app.register({
+    "rexml/xmldecl" => ["rexml/child"],
+    "rexml/doctype" => ["rexml/child"],
+    "rexml/parsers/baseparser" => ["set"]
+  })
 end
