Added OSX sample application Demonstrating `boot.rb` within the iOS and OSX sample apps

--- a/sample_apps/ios/Gemfile
+++ b/sample_apps/ios/Gemfile
@@ -1,7 +1,7 @@
 source "http://rubygems.org"
 
 # RubyMotion aware gems
-gem "motion-bundler", :path => File.expand_path("../..", __FILE__)
+gem "motion-bundler", :path => "../../.."
 
 # RubyMotion unaware gems
 group :motion do
